[package]
name = "aes-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.2"
bytes = "1.4.0"
cbc = "0.1.2"
futures = "0.3.28"
pin-project = "1.0.12"

[dev-dependencies]
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["io"] }
sha2 = "0.10.6"
hex-literal = "0.3.4"
